# checkers

./: CMakeLists.txt
core/: CMakeLists.txt
core/gameRepresentation/: checkerCords.cpp  checkerCords.hpp
core/include/: checker.hpp  checkerCords.hpp  checkersInteractor.hpp
core/source/: checker.cpp  checkerCords.cpp
core_tests/: CMakeLists.txt
core_tests/gameRepresentation/: checkerCordsTest.cpp
raylib/: CMakeLists.txt  main.cpp
